# GoClient

./: .gitignore  Makefile.am  configure.ac
src/: Makefile.am  coords.hxx
src/common/: constants.hxx
src/game-logic/: board.cxx  board.hxx  coords.cxx  coords.hxx
tests/: Makefile.am  board_test.cxx  coords_test.cxx  test_sanity.cxx
