AC_PREREQ([2.69])
AC_INIT([GoClient], [0.0])
AM_INIT_AUTOMAKE([-Wall -Werror subdir-objects foreign])
LT_PREREQ([2.2])

AC_LANG([C++])

AC_CONFIG_SRCDIR([src/main.cxx])
AC_CONFIG_HEADERS([config.h])

AC_PROG_CXX
AC_PROG_INSTALL
AM_PROG_AR
LT_INIT

AC_CONFIG_MACRO_DIR([m4])

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 tests/Makefile])

AC_OUTPUT
